Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -740,6 +740,7 @@ FIELDS ...
 
 ### 1) DISTINCT 위치 차이
 - 중복된 행(Row)을 제거하고, 유일한 값만 조회하는 기능
+- DISTINCT는 보이는 컬럼 기준이 아니라, 실제 row 전체 기준으로 중복 제거됨
   
 #### 1) 중복된 데이터 제거
 - `DISTINCT` 가 FIELDS 앞에 위치함
@@ -757,6 +758,42 @@ define view entity ZI_CONNECTION as select distinct from /dmo/connection
   distance_unit
 }
 ```
+</br>
+
+- 예제 `ZCDSSFLIGHT3_B03`
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'CDS View distinct'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSFLIGHT3_B03 as select distinct from sbook
+{
+    key carrid as Carrid,
+    key connid as Connid
+}
+```
+- sflight는 실제 키에 fldate가 포함되므로, carrid, connid만 조회해도 fldate가 다르면 서로 다른 행으로 인식됨
+<img width="170" height="62" alt="image" src="https://github.com/user-attachments/assets/994e5d98-7ee5-4f21-9e5a-cfc74944dd25" />
+</br>
+
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'CDS View distinct'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSFLIGHT3_B03 as select distinct from sbook
+{
+    key carrid as Carrid,
+    key connid as Connid,
+    key fldate as Fldate
+}
+```
+- row 전체가 완전히 동일해야만 중복 제거가 일어남
+<img width="165" height="57" alt="image" src="https://github.com/user-attachments/assets/3d94f101-314b-468f-ac46-3b5d2d69e445" />
+</br>
+</br>
+</br>
+
 
 #### 2) 집계함수 표현
 - `AVG()` 는 결과 타입 기본값이 FLTP라서 별도 타입 지정 불필요
@@ -814,3 +851,22 @@ define view entity ZI_CONNECTION as select from /dmo/connection
 }
 group by carrier_id
 ```
+</br>
+</br>
+</br>
+
+### 3) JOIN
+#### 1) ABAP SQL 코드
+```abap
+SELECT FROM /dmo/carrier AS a
+  INNER JOIN /dmo/connection AS c
+    ON a~carrier_id = c~carrier_id
+  FIELDS
+    a~carrier_id,
+    c~connection_id,
+    a~name AS carrier_name,
+    c~airport_from_id,
+    c~airport_to_id.
+```
+
+#### 2) CDS 코드
