Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -856,7 +856,11 @@ group by carrier_id
 </br>
 
 ### 3) JOIN
+- ABAP SQL과 CDS는 같은 조인 타입(INNER, LEFT OUTER 등)을 지원하며, CDS에서는 모든 필드에 alias(데이터소스명)를 반드시 명시해야 함
+  
 #### 1) ABAP SQL 코드
+- 필드 구분자는 `~` 사용
+- alias는 필드명이 겹칠 때만 필수
 ```abap
 SELECT FROM /dmo/carrier AS a
   INNER JOIN /dmo/connection AS c
@@ -870,3 +874,18 @@ SELECT FROM /dmo/carrier AS a
 ```
 
 #### 2) CDS 코드
+- 필드 구분자는 `.` 사용
+- 모든 필드에 대해 source alias 필수
+```abap
+define view entity ZI_JOIN_EXAMPLE
+  as select from /dmo/carrier   as a
+    inner join /dmo/connection as c
+      on a.carrier_id = c.carrier_id
+{
+  key c.carrier_id,
+  key c.connection_id,
+      a.name            as CarrierName,
+      c.airport_from_id,
+      c.airport_to_id
+}
+```
