Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -857,6 +857,7 @@ group by carrier_id
 
 ### 3) JOIN
 - ABAP SQL과 CDS는 같은 조인 타입(INNER, LEFT OUTER 등)을 지원하며, CDS에서는 모든 필드에 alias(데이터소스명)를 반드시 명시해야 함
+- JOIN 중에서는 INNER JOIN을 가장 많이 사용하고, 그 다음이 LEFT OUTER JOIN임
   
 #### 1) ABAP SQL 코드
 - 필드 구분자는 `~` 사용
@@ -889,3 +890,12 @@ define view entity ZI_JOIN_EXAMPLE
       c.airport_to_id
 }
 ```
+</br>
+</br>
+</br>
+
+### 3) UNION / UNION ALL
+- `UNION` : 중복 제거해서 표시
+- `UNION ALL` : 중복 제거 없이 전체 데이터 표시
+
+### 3-1) UNION
