Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -894,8 +894,100 @@ define view entity ZI_JOIN_EXAMPLE
 </br>
 </br>
 
-### 3) UNION / UNION ALL
-- `UNION` : 중복 제거해서 표시
-- `UNION ALL` : 중복 제거 없이 전체 데이터 표시
-
 ### 3-1) UNION
+- 서로 다른 DB 테이블이라도 동일 구조로 맞춰 중복 제거 후 세로로 합침
+- 완전히 동일한 row는 하나만 남김
+- 컬럼 개수·이름(별칭)·타입·키 구조가 반드시 동일해야 함
+- annotation은 첫 번째 SELECT 블록에만 작성하면 전체에 적용됨
+#### 1) ABAP SQL 코드
+
+```abap
+SELECT FROM /DMO/I_Carrier
+  FIELDS
+    'Airline'  AS type,
+    AirlineID  AS Id,
+    Name
+  WHERE CurrencyCode = 'GBP'
+
+UNION                       " 중복 제거 후 세로 결합
+
+SELECT FROM /DMO/I_Airport
+  FIELDS
+    'Airport'  AS type,
+    AirportID  AS Id,
+    Name
+  WHERE City = 'London'.
+```
+
+#### 2) CDS 코드
+
+```abap
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZI_UNION_EXAMPLE as select from /DMO/I_Carrier
+{
+  @EndUserText.label: 'Category'   // annotation은 첫 번째 SELECT에만 작성
+  key 'Airline' as type,
+  key AirlineID as Id,
+      Name
+} where CurrencyCode = 'GBP'
+
+union                               // 중복 제거
+
+select from /DMO/I_Airport
+{
+  key 'Airport' as type,            // 구조(개수·순서·타입·이름) 동일해야 함
+  key AirportID as Id,
+      Name
+} where City = 'London'
+```
+
+</br>
+</br>
+
+### 3-2) UNION ALL
+- 서로 다른 DB 테이블이라도 동일 구조로 맞춰 중복 검사 없이 두 SELECT 결과를 그대로 세로로 이어 붙임
+- 컬럼 개수·이름(별칭)·타입·키 구조가 반드시 동일해야 함
+- annotation은 첫 번째 SELECT 블록에만 작성하면 전체에 적용됨
+- UNION에서 리터럴을 사용할 경우, 첫 번째 SELECT의 리터럴 길이가 더 크거나 같아야 타입 충돌 없이 가능함
+
+#### 1) ABAP SQL 코드
+
+```abap
+SELECT FROM /DMO/I_Carrier
+  FIELDS
+    'Airline'  AS type,   
+    AirlineID  AS Id,
+    Name
+  WHERE CurrencyCode = 'GBP'
+
+UNION ALL                    " 행을 세로로 합침 (중복 제거 안함)
+
+SELECT FROM /DMO/I_Airport
+  FIELDS
+    'Airport'  AS type,
+    AirportID  AS Id,
+    Name
+  WHERE City = 'London'.
+```
+
+#### 2) CDS 코드
+
+```abap
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZI_UNION_EXAMPLE as select from /DMO/I_Carrier
+{
+  @EndUserText.label: 'Category'   // annotation은 첫 번째 SELECT에만 작성
+  key 'Airline' as type,
+  key AirlineID as Id,
+      Name
+} where CurrencyCode = 'GBP'
+
+union all                          // CDS에서도 세로 결합
+
+select from /DMO/I_Airport
+{
+  key 'Airport' as type,           // 컬럼 개수·순서·타입·이름 동일해야 함
+  key AirportID as Id,
+      Name
+} where City = 'London'
+```
