Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -940,8 +940,30 @@ select from /DMO/I_Airport
       Name
 } where City = 'London'
 ```
+- 예제 `ZCDSUNION_B03`
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Union CDS View'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSUNION_B03 as select from /DMO/I_Carrier
+{
+    key AirlineID as Airline_ID,
+        Name,
+        'Hello 244' as Hello        // 리터럴이라 위 값이 사이즈가 더 커야 가능
+}
 
-</br>
+union // 중복제거(모든 필드가 동일해야 중복이라고 간주)
+// union all 중복제거 없이 전체 조회
+
+select from /DMO/I_Carrier
+{
+    key AirlineID as Airline_ID,
+        Name,
+        'Hello 2' as Hello
+}
+```
+
 </br>
 
 ### 3-2) UNION ALL
