Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -896,7 +896,7 @@ define view entity ZI_JOIN_EXAMPLE
 
 ### 3-1) UNION
 - 서로 다른 DB 테이블이라도 동일 구조로 맞춰 중복 제거 후 세로로 합침
-- 완전히 동일한 row는 하나만 남김
+- UNION에서 중복으로 간주되려면 SELECT에 포함된 모든 필드 값이 완전히 동일해야 함 (완전히 동일한 row는 하나만 남김)
 - 컬럼 개수·이름(별칭)·타입·키 구조가 반드시 동일해야 함
 - annotation은 첫 번째 SELECT 블록에만 작성하면 전체에 적용됨
 #### 1) ABAP SQL 코드
