Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -950,20 +950,22 @@ define view entity ZCDSUNION_B03 as select from /DMO/I_Carrier
 {
     key AirlineID as Airline_ID,
         Name,
-        'Hello 244' as Hello        // 리터럴이라 위 값이 사이즈가 더 커야 가능
+        'Hello' as Hello       
 }
 
-union // 중복제거(모든 필드가 동일해야 중복이라고 간주)
-// union all 중복제거 없이 전체 조회
+union 
 
 select from /DMO/I_Carrier
 {
     key AirlineID as Airline_ID,
         Name,
-        'Hello 2' as Hello
+        'Hello' as Hello
 }
 ```
+<img width="188" height="50" alt="image" src="https://github.com/user-attachments/assets/31c7aa9d-eecc-4aa1-8dd5-1002530b3ce6" />
 
+</br>
+</br>
 </br>
 
 ### 3-2) UNION ALL
@@ -1013,3 +1015,27 @@ select from /DMO/I_Airport
       Name
 } where City = 'London'
 ```
+- 예제 `ZCDSUNION_B03`
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Union CDS View'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSUNION_B03 as select from /DMO/I_Carrier
+{
+    key AirlineID as Airline_ID,
+        Name,
+        'Hello 244' as Hello        // 리터럴이라 위 값이 사이즈가 더 커야 가능
+}
+
+union // 중복제거(모든 필드가 동일해야 중복이라고 간주)
+// union all 중복제거 없이 전체 조회
+
+select from /DMO/I_Carrier
+{
+    key AirlineID as Airline_ID,
+        Name,
+        'Hello 2' as Hello
+}
+```
+<img width="187" height="63" alt="image" src="https://github.com/user-attachments/assets/76e35222-c986-42a3-a0b5-60b895529dfa" />
