Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -890,6 +890,31 @@ define view entity ZI_JOIN_EXAMPLE
       c.airport_to_id
 }
 ```
+- 예제 `ZCDSFLIGHT2_B03` : Inner Join
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+
+@OData.publish: true
+@OData.entitySet.name: 'Flights'
+define view ZCDSFLIGHT2_B03 as select from sflight as f
+    inner join scarr as _Carrier on f.carrid = _Carrier.carrid
+    association to ZCDSSCARR2_B03 as _Scarr
+    on f.carrid = _Scarr.Carrid
+{
+    key f.carrid as Carrid,
+    key f.connid as Connid,
+    key f.fldate as Fldate,
+    _Carrier.carrname as CarrierName,
+}
+```
+
+<img width="598" height="116" alt="image" src="https://github.com/user-attachments/assets/faec3489-3cf2-425b-b9cb-a28599ed5a88" />
+
 </br>
 </br>
 </br>
