Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -1072,3 +1072,10 @@ select from /DMO/I_Carrier
 ---
 
 </br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 4
+
+<img width="313" height="180" alt="image" src="https://github.com/user-attachments/assets/86e72e97-1c64-4983-8924-d4bd93d697da" />
