Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -1077,5 +1077,37 @@ select from /DMO/I_Carrier
 </br>
 
 ### 실습 4
-
+- INNER JOIN vs LEFT OUTER JOIN 비교 실습
+- INNER JOIN은 공통 데이터만, LEFT OUTER JOIN은 왼쪽 테이블 전체를 기준으로 조회
+- `INNER JOIN` → ON 조건에 안 맞으면 그 행 자체가 제외됨
+- `LEFT OUTER JOIN` → ON 조건에 안 맞아도 왼쪽(b)은 남고, 오른쪽(s)만 NULL 됨
 <img width="313" height="180" alt="image" src="https://github.com/user-attachments/assets/86e72e97-1c64-4983-8924-d4bd93d697da" />
+</br>
+</br>
+</br>
+
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Join'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSJOIN_B03 as select from S4D430_Booking as b
+    inner join stravelag as s        // left outer join stravelag as s
+            on b.agencynum = s.agencynum
+{
+    key b.carrid as Carrid,
+    key b.connid as Connid,
+    key b.fldate as Fldate,
+    key b.bookid as Bookid,
+    b.agencynum as Agencynum,
+    @Semantics.amount.currencyCode: 'Currency'
+    b.amount as Amount,
+    b.currency as Currency,
+    s.name as Name,
+    s.street as Street,
+    s.postcode as Postcode,
+    s.city as City, 
+    s.country as Country
+    
+}
+```
