Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -1,10 +1,5 @@
 ## <  핵심 개념 >
-- **1) CDS에서 산술 연산(계산 필드) 가능**
-- **2) CDS에서 Literal(고정값) 사용 가능**
-- **3) CDS에서 CAST로 타입 변환 가능**
-- **4) 나누기 연산 시 CAST가 필요한 이유**
-- **5) CDS CASE 구문 정리 (Simple vs Complex 분기 구조)**
-- **6) CDS → OData → Gateway Client 흐름**
+- **1) Class 데이터 테스트는 `F9` 로**
 </br>
 </br>
 
