Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -1,5 +1,12 @@
 ## <  핵심 개념 >
 - **1) Class 데이터 테스트는 `F9` 로**
+- **2) ABAP SQL 내장 함수 정리(Numeric Functions)**
+
+  - Date Processing Example (날짜 처리 함수 예제)
+  - CURRENCY CONVERSION
+  - Timestamp Conversion (타임스탬프 날짜 변환)
+  - CDS Session Variable
+
 </br>
 </br>
 
