Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -6,6 +6,10 @@
   - CURRENCY CONVERSION
   - Timestamp Conversion (타임스탬프 날짜 변환)
   - CDS Session Variable
+- **3) CDS View에서 파라미터 설정하기**
+- **4) DISTINCT 위치 차이**
+- **5) JOIN / UNION / UNION ALL**
+- 
 
 </br>
 </br>
