Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -1,1 +1,59 @@
+## <  핵심 개념 >
+- **1) Class 데이터 테스트는 `F9` 로**
+- **2) ABAP SQL 내장 함수 정리(Numeric Functions)**
 
+  - Date Processing Example (날짜 처리 함수 예제)
+  - CURRENCY CONVERSION
+  - Timestamp Conversion (타임스탬프 날짜 변환)
+  - CDS Session Variable
+- **3) CDS View에서 파라미터 설정하기**
+- **4) DISTINCT 위치 차이**
+- **5) JOIN / UNION / UNION ALL**
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP SQL 신문법 >
+</br>
+
+```abap
+REPORT z_new_sql_all_in_one_b03.
+
+*----------------------------------------------------------------------*
+* [신문법 마스터] Asterisk(*)와 모든 옵션(Group, Order) 결합
+*----------------------------------------------------------------------*
+SELECT FROM ZCDSMEALRESERVE_MB03
+  FIELDS
+    *,         " 1. 현재 뷰의 모든 필드 가져오기 (*)
+    \_Spfli._Scarr.Carrname as Long_Airline_Name,      " 2. 추가로 Association 필드 하나 더 얹기 (\)
+    count( * )            as Booking_Count,        " 3. 집계 함수 (Aggregate)
+    avg( Luggweight )     as Avg_Weight
+  WHERE cancelled <> 'X'              " 취소되지 않은 건만
+    AND carrid = 'AA'                 " 특정 항공사 조건
+
+  /* [중요] *를 썼을 때의 GROUP BY 규칙 */
+  " 집계 함수를 썼다면, *에 포함된 모든 일반 필드와 \ 경로 필드를 그룹바이에 적어야 함
+  " (실무에서는 *와 GROUP BY를 함께 쓰기보다 필요한 필드만 적는 것을 권장)
+  GROUP BY 
+    Carrid, Connid, Fldate, Bookid,   " * 안에 포함된 키 필드들
+    AirlineName, AirlineCurrency, 
+    DepartureCity, ArrivalCity, FlightTime,
+    Cust_Rank, Meal_Name, Custtype, Smoker,
+    Luggweight, Wunit, Class,
+    \_Spfli._Scarr.Carrname           " 경로 표현식 필드
+
+  ORDER BY     " [정렬] 별칭(Alias)으로 정렬
+    Avg_Weight DESC,                  " 평균 무게가 무거운 순서
+    Booking_Count ASC                 " 예약 건수는 적은 순서
+  INTO TABLE @DATA(gt_final_data).    " 인라인 선언으로 한 방에 수신
+
+" 결과 출력
+IF sy-subrc = 0.
+  cl_demo_output=>display( gt_final_data ).
+  MESSAGE |총 { lines( gt_final_data ) }개 그룹의 데이터가 분석되었습니다.| TYPE 'S'.  " 선택된 행 개수 체크 (LINES 함수)
+ENDIF.
+```
