Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -32,6 +32,7 @@ SELECT FROM ZCDSMEALRESERVE_MB03
     \_Spfli._Scarr.Carrname as Long_Airline_Name,      " 2. 추가로 Association 필드 하나 더 얹기 (\)
     count( * )            as Booking_Count,        " 3. 집계 함수 (Aggregate)
     avg( Luggweight )     as Avg_Weight
+
   WHERE cancelled <> 'X'              " 취소되지 않은 건만
     AND carrid = 'AA'                 " 특정 항공사 조건
 
@@ -57,3 +58,19 @@ IF sy-subrc = 0.
   MESSAGE |총 { lines( gt_final_data ) }개 그룹의 데이터가 분석되었습니다.| TYPE 'S'.  " 선택된 행 개수 체크 (LINES 함수)
 ENDIF.
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+</br>
+
+- 도메인 설정 실습
+- CDS 실습
+<img width="707" height="323" alt="image" src="https://github.com/user-attachments/assets/7c087899-d7de-4691-8f47-042a143f6b56" />
