Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -74,3 +74,45 @@ ENDIF.
 - 도메인 설정 실습
 - CDS 실습
 <img width="707" height="323" alt="image" src="https://github.com/user-attachments/assets/7c087899-d7de-4691-8f47-042a143f6b56" />
+</br>
+
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'ZCDSCUSTOM_B03'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSCUSTOM_B03 as select from sbuspart as _Buspart
+    inner join scustom as _Custom on _Buspart.buspartnum = _Custom.id
+    association to I_DomainFixedValueText as _DomainFixed
+        on 'S_CUSTTYPE' = _DomainFixed.SAPDataDictionaryDomain
+//        and _Custom.custtype = _DomainFixed.DomainValue
+//        and 'E' = _DomainFixed.Language
+{
+    key _Buspart.buspartnum as Buspartnum,       // 고객 ID
+    _Custom.name as Name,   // 고객명
+    _Custom.custtype as Custtype,   // 고객타입
+//    _DomainFixed.DomainText as CusttypeName,    // 고객타입명
+    _DomainFixed[1: Language = $session.system_language and DomainValue = $projection.Custtype ].DomainText as CusttypeName,
+    
+    case        // 고객등급
+    when _Custom.custtype = 'B' and cast(_Custom.discount as abap.fltp) >= 20 then 'VB'
+    when _Custom.custtype = 'B' and cast(_Custom.discount as abap.fltp) < 20 then 'B'
+    when _Custom.custtype = 'P' and cast(_Custom.discount as abap.fltp) >= 20 then 'VP'
+    when _Custom.custtype = 'P' and cast(_Custom.discount as abap.fltp) < 20 then 'P'
+    else ' '
+    end   as Custrate,
+    
+    case        // 고객등급명
+    when _Custom.custtype = 'B' and cast(_Custom.discount as abap.fltp) >= 20 then 'VIP 고객(기업)'
+    when _Custom.custtype = 'B' and cast(_Custom.discount as abap.fltp) < 20 then '고객(기업)'
+    when _Custom.custtype = 'P' and cast(_Custom.discount as abap.fltp) >= 20 then 'VIP 고객(개인)'
+    when _Custom.custtype = 'P' and cast(_Custom.discount as abap.fltp) < 20 then '고객(개인)'
+    else ' '
+    end as CustrateText,
+    
+    _Buspart.buspatyp as Buspatyp,  // 고객구분
+    _Custom.discount as Discount,   // 할인율
+    
+    _DomainFixed
+}
+```
