Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -77,6 +77,7 @@ ENDIF.
 <img width="707" height="323" alt="image" src="https://github.com/user-attachments/assets/7c087899-d7de-4691-8f47-042a143f6b56" />
 </br>
 
+- CDS View : `ZCDSCUSTOM_B03`
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
