Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -76,6 +76,7 @@ ENDIF.
 - CDS 실습
 <img width="707" height="323" alt="image" src="https://github.com/user-attachments/assets/7c087899-d7de-4691-8f47-042a143f6b56" />
 </br>
+</br>
 
 - CDS View : `ZCDSCUSTOM_B03`
 ```abap
@@ -118,3 +119,13 @@ define view entity ZCDSCUSTOM_B03 as select from sbuspart as _Buspart
     _DomainFixed
 }
 ```
+</br>
+</br>
+</br>
+
+### 실습 2
+- 실습 1에 이어서 진행
+- SAP GUI에서 CDS View를 이용해 ALV 출력
+</br>
+
+<img width="382" height="92" alt="image" src="https://github.com/user-attachments/assets/1be4ab5b-4ff8-47bf-8bb4-c1dedb662356" />
