Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -132,3 +132,67 @@ define view entity ZCDSCUSTOM_B03 as select from sbuspart as _Buspart
 </br>
 </br>
 </br>
+
+**1) Report 프로그램**
+```abap
+REPORT zcustom_b03_0226.
+
+INCLUDE zcustom_b03_0226_TOP.
+INCLUDE zcustom_b03_0226_C01.
+INCLUDE zcustom_b03_0226_F01.
+INCLUDE zcustom_b03_0226_O01.
+INCLUDE zcustom_b03_0226_I01.
+
+START-OF-SELECTION.
+  PERFORM set_data.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) C01 프로그램**
+```abap
+" zcustom_b03_0226.
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS: on_toolbar FOR EVENT toolbar
+      OF cl_gui_alv_grid IMPORTING e_object,
+        on_user_command FOR EVENT user_command
+      OF cl_gui_alv_grid IMPORTING e_ucomm.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_toolbar.
+    DATA ls_button TYPE STB_BUTTON.
+    ls_button-butn_type = 3.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'DETAIL'.
+    ls_button-text = 'Detail'.
+    ls_button-butn_type = 0.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+  ENDMETHOD.
+
+  METHOD on_user_command.
+    DATA: lt_select_data TYPE LVC_T_ROW,
+          ls_select_data TYPE LVC_S_ROW,
+          gs_data LIKE LINE OF gt_data.
+    CASE E_UCOMM.
+      WHEN 'DETAIL'.
+        CALL METHOD go_alv->get_selected_rows
+          IMPORTING et_index_rows = lt_select_data.
+        IF LINES( lt_select_data ) NE 1.
+          MESSAGE '1행만 선택해주세요.' TYPE 'I'.
+        ELSE.
+          READ TABLE gt_data INTO gs_data INDEX lt_select_data[ 1 ]-index.
+          MOVE-CORRESPONDING gs_data TO ZSCUSTOM_B03_0226.
+          CALL SCREEN 110
+            STARTING AT 5 5
+            ENDING AT 58 17.
+        ENDIF.
+      WHEN OTHERS.
+    ENDCASE.
+  ENDMETHOD.
+ENDCLASS.
+```
