Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -151,7 +151,7 @@ START-OF-SELECTION.
 
 **2) C01 프로그램**
 ```abap
-" zcustom_b03_0226.
+REPORT zcustom_b03_0226.
 
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
@@ -195,4 +195,182 @@ CLASS lcl_event_handler IMPLEMENTATION.
     ENDCASE.
   ENDMETHOD.
 ENDCLASS.
+```
+</br>
+
+**3) F01 프로그램**
+```abap
+REPORT zcustom_b03_0226.
+
+******************** SET_DATA ********************
+FORM set_data .
+  " 이것도 가능
+* SELECT * FROM zcdscustom_b03
+* WHERE buspartnum < 30
+* INTO CORRESPONDING FIELDS OF TABLE @gt_data.
+  SELECT FROM zcdscustom_b03
+    FIELDS buspartnum, Name, Custtype, CusttypeName, Custrate, CustrateText, Buspatyp, Discount
+    WHERE buspartnum < 30
+    INTO TABLE @gt_data.
+ENDFORM.
+
+******************** SET_FCAT ********************
+FORM set_fcat .
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'BUSPARTNUM'.
+  gs_fcat-coltext   = 'Buspartnum'.
+  gs_fcat-col_pos = 1.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'NAME'.
+  gs_fcat-coltext   = 'Name'.
+  gs_fcat-col_pos = 2.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CUSTTYPE'.
+  gs_fcat-coltext   = 'Custtype'.
+  gs_fcat-col_pos = 3.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CUSTTYPENAME'.
+  gs_fcat-coltext   = 'Custtype Name'.
+  gs_fcat-col_pos = 4.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CUSTRATE'.
+  gs_fcat-coltext   = 'Cust rate'.
+  gs_fcat-col_pos = 5.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CUSTRATETEXT'.
+  gs_fcat-coltext   = 'Cust Rate Text'.
+  gs_fcat-col_pos = 6.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'BUSPATYP'.
+  gs_fcat-coltext   = 'Buspatyp'.
+  gs_fcat-col_pos = 7.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'DISCOUNT'.
+  gs_fcat-coltext   = 'Discount'.
+  gs_fcat-col_pos = 8.
+  APPEND gs_fcat TO gt_fcat.
+ENDFORM.
+
+******************** SET_LAYOUT ********************
+FORM set_layout .
+  gs_layout-grid_title = 'CDS View에서 가져옴'.
+  gs_layout-zebra      = 'X'.
+  gs_layout-sel_mode   = 'A'.
+ENDFORM.
+```
+</br>
+
+**4) O01 프로그램**
+```abap
+REPORT zcustom_b03_0226.
+
+******************** STATUS_0100 ********************
+MODULE status_0100 OUTPUT.
+  SET PF-STATUS 'S100'.
+  SET TITLEBAR 'T100'.
+ENDMODULE.
+
+******************** INIT_ALV ********************
+MODULE init_alv OUTPUT.
+  IF go_cont IS INITIAL.
+    CREATE OBJECT go_cont
+      EXPORTING
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        OTHERS                      = 6.
+
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_cont
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        OTHERS            = 5.
+
+    PERFORM set_layout.
+    PERFORM set_fcat.
+    SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv.
+    SET HANDLER lcl_event_handler=>on_user_command FOR go_alv.
+    
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        is_layout                     = gs_layout
+* i_structure_name              = 'ZSCUSTOM_B03_0226'
+      CHANGING
+        it_fieldcatalog               = gt_fcat
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        OTHERS                        = 4.
+  ELSE.
+    CALL METHOD go_alv->refresh_table_display
+      EXCEPTIONS
+        finished = 1
+        OTHERS   = 2.
+  ENDIF.
+ENDMODULE.
+
+******************** STATUS_0110 ********************
+MODULE status_0110 OUTPUT.
+ SET PF-STATUS 'S_110'.
+ SET TITLEBAR 'T110'.
+ENDMODULE.
+```
+</br>
+
+**5) I01 프로그램**
+```abap
+REPORT zcustom_b03_0226.
+
+******************** USER_COMMAND_0100 ********************
+MODULE user_command_0100 INPUT.
+  CASE ok_code.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+******************** EXIT ********************
+MODULE exit INPUT.
+  CASE ok_code.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+******************** USER_COMMAND_0110 ********************
+MODULE user_command_0110 INPUT.
+  CASE ok_code.
+    WHEN 'CLOSE'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
 ```
