Update 2-06. 프로그래밍 코드 최적화(02.26).md

--- a/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
+++ b/RAP/2-06. 프로그래밍 코드 최적화(02.26).md
@@ -374,3 +374,12 @@ MODULE user_command_0110 INPUT.
   ENDCASE.
 ENDMODULE.
 ```
+</ㅠㄱ>
+
+**6) 결과 확인**
+
+<img width="472" height="410" alt="image" src="https://github.com/user-attachments/assets/d193dcc0-4b3a-4c84-9543-685317254a99" />
+
+<img width="456" height="410" alt="image" src="https://github.com/user-attachments/assets/6c9853b3-7744-430c-8c45-10a04dd8f603" />
+
+<img width="472" height="441" alt="image" src="https://github.com/user-attachments/assets/49aaf859-dbbe-4d22-b7b0-f98bafde186d" />
