Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -386,8 +386,9 @@ group by
 ```
 - Language 조건으로 조회했을 때 동일 Currency에 대해 두 행 이상 존재하면 1: 사용 시 카디널리티 위반
 
-  - 정상: EN으로 된 이름이 'United States Dollar' 딱 하나일 때.
-  - 에러: EN으로 된 이름이 'Dollar'와 'US Dollar' 두 개가 있을 때.
+  - 컴퓨터(ABAP SQL) 입장에서는 _Text라는 테이블(Association)에 한 항공사(Carrid)당 텍스트가 여러 개(한국어, 영어, 일어 등) 있을 거라고 생각
+  - 항공사는 1줄인데, 이름 텍스트가 여러 개면 결과가 몇 줄이 되어야 하지? 에러를 내야 하나?
+  - 이 때 WHERE Language = 'E'라고 조건을 걸었으니까, 결과는 무조건 1줄만 나올 거라고 확신을 주는 것
 - `$session.system_language` : 현재 로그인한 사용자의 SAP 세션 언어값 (예: KO, EN 등)
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
