Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -6,6 +6,7 @@
 - **5) Association만 사용 vs 실제 JOIN 발생 조건**
 - **6) CDS WHERE·필터·집계 함수**
 - **7) ABAP SQL Association Path Expression 사용법**
+- **8) `$projection` 이용하면 같은 `{ }` 안에서 별칭으로 선언한 변수를 그 별칭을 다시 참조해서 다른 필드를 정의할 수 있음**
 </br>
 
 - **`@Metadata.ignorePropagatedAnnotations: ` : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함**
