Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -59,6 +59,7 @@
 </br>
 
 ## < RAP 기반 CDS → OData 서비스 → Fiori UI 구현 전체 개발 절차 >
+- `_R_` , `_IR_` 는 Interface(데이터 모델) View를 의미하고, `_C_` , `_CR_` 는 Projection(Consumption) View를 의미
 </br>
 
 ### 1) Interface Root CDS View 생성 화면 (Name 및 Description 설정)
